--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.2.1",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1",
-    "styled-components": "^5.2.1"
+    "web3": "^1.6.0"
   },
   "scripts": {
     "dev": "react-scripts start",
@@ -42,9 +43,9 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-system": "^5.1.11",
     "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6"
+    "@testing-library/react": "^11.2.6",
+    "@types/styled-system": "^5.1.11"
   },
   "resolutions": {
     "styled-components": "^5"
