--- a/client/package.json
+++ b/client/package.json
@@ -64,7 +64,8 @@
     "@storybook/react": "^6.3.12",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
-    "@types/styled-system": "^5.1.11"
+    "@types/styled-system": "^5.1.11",
+    "react-icons": "^4.3.1"
   },
   "resolutions": {
     "styled-components": "^5"
