--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/material": "^5.1.1",
+    "@mui/styled-engine-sc": "npm:@mui/styled-engine-sc@latest",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -14,7 +16,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.2.1",
+    "styled-components": "^5.3.3",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1",
     "web3": "^1.6.0"
@@ -68,6 +70,7 @@
     "react-icons": "^4.3.1"
   },
   "resolutions": {
-    "styled-components": "^5"
+    "styled-components": "^5",
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
   }
 }
