--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mui/material": "^5.1.1",
-    "@mui/styled-engine-sc": "npm:@mui/styled-engine-sc@latest",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -70,7 +68,6 @@
     "react-icons": "^4.3.1"
   },
   "resolutions": {
-    "styled-components": "^5",
-    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
+    "styled-components": "^5"
   }
 }
